--- a/assets/css/singlepost.css
+++ b/assets/css/singlepost.css
@@ -4,9 +4,16 @@
     font-weight: normal;
     font-size: 0.9em;
     white-space: pre-line;
-  }
-
-  .delete-button-container {
+}
+.delete-button-container {
     text-align: center;
     margin-top: 20px;
-  }
+}
+
+.delete-button-container button {
+    background-color: saddlebrown; 
+}
+
+delete-button-container button:hover {
+    background-color: whitesmoke;
+}
