--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,306 +173,3 @@ button:disabled, button[disabled] {
   h1 {
     font-size: 1.2rem;
 }
-
-/*mainpage*/
-
-.carousel {
-  width: 100%;
-  max-width: 100%; /* Change max-width to 100% */
-  margin: 0 auto;
-  position: relative;
-}
-
-.carousel ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: relative;
-  height: 400px; /* Adjust the height as needed */
-  overflow: hidden;
-}
-
-.carousel .slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;  
-  opacity: 0;
-  z-index: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.carousel .slide[data-active] {
-  opacity: 1;
-  z-index: 1;
-}
-
-.carousel .slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.carousel .carousel-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  border: none;
-  font-size: 2rem;
-  cursor: pointer;
-  padding: 0.5rem 1rem;
-  z-index: 1;
-}
-
-.carousel .carousel-button.prev {
-  right: 0;
-}
-
-.carousel .carousel-button.next {
-  left: 0;
-}
-
-.carousel-indicators {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-
-.carousel-indicator {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin: 0 6px;
-  cursor: pointer;
-  border: none;
-  transition: background-color 0.3s ease;
-}
-
-.carousel-indicator.active {
-  background-color: rgba(255, 255, 255, 0.9);
-}
-
-.blog-post-content {
-  text-align: left;
-  
-}
-
-.blog-post-content h2 {
-  padding: 10px;
-}
-
-.thumbnail-grid {
-    max-width: 1000px;
-    margin: auto;
-}
-
-.blogpost-list {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px;
-}
-
-#create-post-button-container {
-    display: flex;
-    justify-content: flex-end;
-    padding-bottom: 10px;
-}
- 
-h2 {
-    font-size: 1rem;
-    margin: 0;
-    padding: 0;
-}
-
-.blogpost-section {
-    max-width: 750px;
-    margin: auto;
-    text-align: left;
-    line-height: 1.5;
-    padding: 10px;
-}
-
-img {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 5px;
-}
-
-.blog-post {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-}
-/*post/index.hmtl*/
-#singlePostContainer p {
-  font-family: 'Lora', serif;
-  color: black;
-  font-weight: normal;
-  font-size: 0.9em;
-  white-space: pre-line;
-}
-
-
-/*login*/
-input, 
-select,
-textarea {
-border: 1px solid #c4c4c4;
-border-radius: 5px;
-margin: 10px 10px 10px 0px;
-padding: 10px;
-}
-
-textarea {
-    height: 65%;
-    min-height: 100px;
-}
-
-.login-form {
-    max-width: 1000px;
-    margin: 50px auto;
-    text-align: center;
-}
-
-.form-wrapper {
-    display: flex;
-    text-align: left;
-    flex-direction: column;
-}
-
-
-.form-wrapper > * {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-/*Post*/
-
-.post-form {
-  max-width: 1000px;
-  margin: 50px auto;
-  text-align: center;
-}
-
-.post-form-wrapper {
-  display: flex;
-  text-align: left;
-  flex-direction: column;
-}
-
-.post-form-wrapper > * {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.post-form-wrapper input,
-.post-form-wrapper select,
-.post-form-wrapper textarea {
-  border: 1px solid #c4c4c4;
-  border-radius: 5px;
-  margin: 10px 10px 10px 0px;
-  padding: 10px;
-}
-
-.post-form-wrapper textarea {
-  height: 65%;
-  min-height: 100px;
-  width: auto;
-}
-
-.post-form-wrapper button {
-  align-self: auto;
-}
-
-
-/*single post*/
-  .delete-button-container {
-    text-align: center;
-    margin-top: 20px;
-  }
-
-  .delete-button-container button {
-    background-color: saddlebrown; 
-  }
-
-  delete-button-container button:hover {
-    background-color: whitesmoke;
-  }
-
-
-
-/*media queries*/
-
-@media (min-width: 500px) {
-  .post-form {
-    max-width: 1200px;
-    margin: 50px auto;
-    text-align: center;
-  }
-  
-  .post-form-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    text-align: left;
-  }
-  
-  .post-form-wrapper input,
-  .post-form-wrapper select,
-  .post-form-wrapper textarea {
-    width: 100%;
-    margin: 10px 0;
-    padding: 10px;
-    border: 1px solid #c4c4c4;
-    border-radius: 5px;
-  }
-  
-  .post-form-wrapper textarea {
-    width: 400px;
-    height: 350px;
-  }
-  
-  .post-form-wrapper button {
-    margin-top: 20px;
-    align-self: flex-start;
-  }
-  }
-
-@media (min-width:600px) {
-    .profile-container {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      background-color: #f2f2f2;
-  }
-
-  .blogpost-list {
-    grid-template-columns: 1fr 1fr;
-}
-  
-  }
-
-@media (min-width: 900px) {
-  /* Styles for screens with a maximum width of 768px */
-  
-  .blogpost-list {
-    grid-template-columns: repeat(3, minmax(0,1fr));
-  }
-}
-
